added visit method to search by searchterm
